# shadow-drive-rust

./: Cargo.toml
sdk/: Cargo.toml
sdk/examples/: end_to_end.rs
sdk/src/: client.rs  error.rs  models.rs
sdk/src/client/: add_immutable_storage.rs  add_storage.rs  create_storage_account.rs  edit_file.rs  get_storage_account.rs  list_objects.rs  make_storage_immutable.rs  migrate.rs  redeem_rent.rs  reduce_storage.rs  refresh_stake.rs  store_files.rs  top_up.rs  upload_multiple_files.rs
