[package]
name = "shadow-drive-sdk"
description = "The Rust SDK for GenesysGo's Shadow Drive"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
base64 = "0.21"
bincode = "1.3"
bytes = "1"
sha2 = "0.10"
futures = "0.3"
hex = "0.4"
itertools = "0.12"
solana-client = "1.14.1"
solana-transaction-status = "1.14.1"
solana-account-decoder = "1.14.1"
solana-sdk = "1.14.1"
spl-associated-token-account = "2"
spl-token = "4"
shadow-drive-user-staking = "2.0.1"
anchor-lang = "0.26"
async-trait = "0.1"
byte-unit = "5"
lazy_static = "1"
serde = "1"
serde_json = "1"
reqwest = {version = "0.11", default-features = false, features = ["multipart", "stream"]}
tokio = {version = "1", default-features = false, features = ["fs", "io-util"]}
tracing = "0.1"
sodalite = "0.4.0"
infer = "0.15.0"
